--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,11 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+jspm_packages
 
 # System Files
 .DS_Store
 Thumbs.db
+
+# Serverless directories
+/.serverless
